# tgm4-konoha-hololive

./: .gitignore  README.md  characters.py  egm-work.psd  export.jsx  generate.py  girlname0.twx.psd  girlname1.twx.psd  girlname2.twx.psd  girlname3.twx.psd  girlname4.twx.psd  girlname5.twx.psd  girlname6.twx.psd  girlname7.twx.psd  girlname8.twx.psd  girlname9.twx.psd  icon.psd  note.md  pyproject.toml  release.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
